plugins {
	id 'fabric-loom' version '0.10-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven {
		name 'm2-dv8tion'
		url 'https://m2.dv8tion.net/releases'
	}
	mavenCentral()
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation('net.dv8tion:JDA:4.4.0_350') {
		exclude module: 'opus-java'
	}
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'co.elastic.clients:elasticsearch-java:7.16.3'

	include 'org.xerial:sqlite-jdbc:3.36.0.2'
	include 'com.google.code.gson:gson:2.8.9'
	include('net.dv8tion:JDA:4.4.0_350') {
		exclude module: 'opus-java'
	}
	include 'com.googlecode.json-simple:json-simple:1.1.1'

	include 'com.squareup.okhttp3:okhttp:3.13.0'
	include 'com.squareup.okio:okio:1.17.2'
	include 'org.slf4j:slf4j-api:1.7.25'
	include 'com.neovisionaries:nv-websocket-client:2.14'
	include 'org.apache.commons:commons-collections4:4.1'
	include 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
	include 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
	include 'com.fasterxml.jackson.core:jackson-core:2.10.1'
	include 'net.sf.trove4j:trove4j:3.0.3'

	include 'co.elastic.clients:elasticsearch-java:7.16.3'
	include 'org.apache.httpcomponents:httpclient:4.5.10'
	include 'org.apache.httpcomponents:httpcore:4.4.12'
	include 'org.apache.httpcomponents:httpasyncclient:4.1.4'
	include 'org.apache.httpcomponents:httpcore-nio:4.4.12'
	include 'commons-codec:commons-codec:1.11'
	include 'commons-logging:commons-logging:1.1.3'
	include 'com.google.code.findbugs:jsr305:3.0.2'
	include 'jakarta.json:jakarta.json-api:2.0.1'
	include 'org.eclipse.parsson:parsson:1.0.0'
	include 'org.yaml:snakeyaml:1.26'
	include 'com.fasterxml.jackson.core:jackson-core:2.10.4'
	include 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.10.4'
	include 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.4'
	include 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.10.4'
	include 'org.lz4:lz4-java:1.8.0'
	include 'org.elasticsearch:elasticsearch-core:7.16.3'
	include 'org.apache.lucene:lucene-core:8.10.1'
	include 'org.apache.lucene:lucene-analyzers-common:8.10.1'
	include 'org.apache.lucene:lucene-backward-codecs:8.10.1'
	include 'org.apache.lucene:lucene-grouping:8.10.1'
	include 'org.apache.lucene:lucene-highlighter:8.10.1'
	include 'org.apache.lucene:lucene-join:8.10.1'
	include 'org.apache.lucene:lucene-memory:8.10.1'
	include 'org.apache.lucene:lucene-misc:8.10.1'
	include 'org.apache.lucene:lucene-queries:8.10.1'
	include 'org.apache.lucene:lucene-queryparser:8.10.1'
	include 'org.apache.lucene:lucene-sandbox:8.10.1'
	include 'org.apache.lucene:lucene-spatial3d:8.10.1'
	include 'org.apache.lucene:lucene-suggest:8.10.1'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}